# better-news

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts  convergence.ts  events.ts  networks.ts  pipeline.ts  reports.ts  thresholds.ts
dashboard/src/components/convergence/: CouplingPatterns.tsx  HeatmapMatrix.tsx  SystemicNodesTable.tsx
dashboard/src/components/dashboard/: AlertTicker.tsx  ConvergenceHotspots.tsx
dashboard/src/components/events/: EventCard.tsx  EventDetail.tsx  EventFeed.tsx  EventFilters.tsx
dashboard/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/pages/: ConvergencePage.tsx  DashboardPage.tsx  EventDetailPage.tsx  EventsPage.tsx  MapPage.tsx  NetworkDetailPage.tsx  NetworksPage.tsx  ReportsPage.tsx  ThresholdsPage.tsx
dashboard/src/styles/: smae-palette.css
dashboard/src/types/: smae.ts
smae/: __init__.py
smae/api/: __init__.py  app.py  db.py  deps.py  models.py
smae/api/routers/: convergence.py  events.py  networks.py  pipeline.py  reports.py  thresholds.py
smae/cli/: __init__.py  main.py
smae/engine/: __init__.py  pipeline.py
smae/models/: __init__.py  convergence.py  enums.py  events.py  thresholds.py
smae/pdf/: __init__.py  generator.py  styles.py
smae/sources/: __init__.py  acled.py  base.py  gfw.py  idmc.py
tests/: test_api.py  test_cli_sources.py  test_convergence_report.py  test_models.py  test_pipeline.py  test_thresholds.py
(+9 files in other folders)
